--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <script>
         async function fetchRepoFiles() {
-            const username = 'your-username';  // Replace with your GitHub username
-            const repo = 'your-repository';    // Replace with your GitHub repository name
+            const username = 'lehoangphu';  // Replace with your GitHub username
+            const repo = 'math4kid';    // Replace with your GitHub repository name
 
             const apiUrl = `https://api.github.com/repos/${username}/${repo}/contents/`;
 
