--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="hero">
   <h1>Welcome to Math for Kids!</h1>
   <p>Explore the fun world of math with interactive lessons and exciting problems.</p>
-  <a href="#lessons" class="cta-button">Start Learning</a>
+  <!-- Removed the "Start Learning" button -->
 </div>
 
 <section id="lessons">
@@ -14,14 +14,21 @@ title: Home
   <div class="card-container">
     {% for page in site.pages %}
       {% if page.title and page.title != "Home" %}
-        <div class="card">
-          <h3>{{ page.title }}</h3>
-          <p>{{ page.excerpt | strip_html | truncatewords: 20 }}</p>
-          <a href="{{ page.url | relative_url }}" class="button">Read More</a>
-        </div>
+        <a href="{{ page.url | relative_url }}" class="card-link">
+          <div class="card">
+            <!-- Optionally add an icon or image -->
+            <!-- <img src="https://your-image-url.com/icon.png" alt="Lesson Icon" class="card-icon"> -->
+            <h3>{{ page.title }}</h3>
+            <p>{{ page.excerpt | strip_html | truncatewords: 20 }}</p>
+            <!-- Removed the "Read More" button -->
+          </div>
+        </a>
       {% endif %}
     {% endfor %}
   </div>
 </section>
 
-<!-- Optional: Add a footer or additional sections -->
+<footer>
+  <p>© 2023 Math for Kids. All rights reserved.</p>
+  <p>Contact us at <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+</footer>
