--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@ title: Home
 </section>
 
 <footer>
-  <p>© 2023 Math for Kids. All rights reserved.</p>
-  <p>Contact us at <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+  <p>© 2024 Math for Kids. All rights reserved.</p>
+  <p>Contact us at <a href="mailto:lehoangphu@gmail.com">lehoangphu@gmail.com</a></p>
 </footer>
